# Embedded-DOOM

./: Cargo.toml  build.rs  memory.x
.cargo/: config.toml
src/: main.rs
src/game/: controls.rs  display.rs  logic.rs  mod.rs  player.rs
src/game/engine/: audio.rs  display.rs  led.rs  mod.rs  raycaster.rs  renderer.rs  sprites.rs
src/game/input/: controls.rs
src/game/state/: enemy.rs  map.rs  mod.rs  player.rs
tools/: png_to_rgb565.py
