[package]
name = "project"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.7", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-rp = { version = "0.3", features = ["defmt", "unstable-pac", "time-driver", "rp235xa"] }
embassy-time = { version = "0.4", features = ["defmt"] }
embassy-sync = "0.8.0"
embassy-embedded-hal = "0.6.0"
display-interface-spi = "0.5"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
panic-halt = "0.2"
cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7"

embedded-graphics = "0.8"
mipidsi = "0.8"